<resources>
    <string name="app_name">XgridTest</string>
    <string name="upgrade_to_pro">Upgrade to PRO</string>
    <string name="privacy">Privacy</string>
    <string name="purchase_history">Purchase History</string>
    <string name="settings">Settings</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="logout">Logout</string>
</resources>