<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?attr/bgColor"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_mode"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:src="?attr/themeIcon" />


            <RelativeLayout
                android:id="@+id/profile_icon"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_below="@id/btn_mode"
                android:layout_centerInParent="true"
                android:background="@drawable/profile_shape">

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_baseline_perm_identity_24" />

            </RelativeLayout>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_icon"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_14sdp"
                android:text="John Doe"
                android:textColor="?attr/textColor"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="john.doe@example.com"
                android:textColor="?attr/textColor"
                android:textSize="@dimen/_12sdp" />


            <Button
                android:id="@+id/btn_upgrade"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_email"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/btn_shape"
                android:text="@string/upgrade_to_pro"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <RelativeLayout
                android:id="@+id/privacy_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_upgrade"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:background="@drawable/relative_shape"
                android:paddingVertical="@dimen/_12sdp">


                <ImageView
                    android:id="@+id/privacy_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:src="@drawable/ic_outline_privacy_tip_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_toStartOf="@+id/privacy_next"
                    android:layout_toEndOf="@+id/privacy_icon"
                    android:text="@string/privacy"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/privacy_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:src="@drawable/ic_baseline_navigate_next_24" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/purchase_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/privacy_layout"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/relative_shape"
                android:paddingVertical="@dimen/_12sdp">


                <ImageView
                    android:id="@+id/purchase_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:src="@drawable/ic_baseline_history_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_toStartOf="@+id/purchase_next"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_toEndOf="@+id/purchase_icon"
                    android:text="@string/purchase_history"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/purchase_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:src="@drawable/ic_baseline_navigate_next_24" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/help_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/purchase_layout"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/relative_shape"
                android:paddingVertical="@dimen/_12sdp">


                <ImageView
                    android:id="@+id/help_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:src="@drawable/ic_baseline_help_outline_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_toStartOf="@+id/help_next"
                    android:layout_toEndOf="@+id/help_icon"
                    android:text="@string/help_amp_support"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/help_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:src="@drawable/ic_baseline_navigate_next_24" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/setting_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_layout"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/relative_shape"
                android:paddingVertical="@dimen/_12sdp">


                <ImageView
                    android:id="@+id/setting_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:src="@drawable/ic_outline_settings_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_toStartOf="@+id/setting_next"
                    android:layout_toEndOf="@+id/setting_icon"
                    android:text="@string/settings"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/setting_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:src="@drawable/ic_baseline_navigate_next_24" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/invite_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/setting_layout"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/relative_shape"
                android:paddingVertical="@dimen/_12sdp">


                <ImageView
                    android:id="@+id/invite_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:src="@drawable/ic_outline_person_add_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_toStartOf="@+id/invite_next"
                    android:layout_toEndOf="@+id/invite_icon"
                    android:text="@string/invite_a_friend"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/invite_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:src="@drawable/ic_baseline_navigate_next_24" />


            </RelativeLayout>


            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/invite_layout"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/relative_shape"
                android:text="@string/logout"
                android:backgroundTint="?attr/buttonColor"
                android:textColor="?attr/buttonTextColor"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp" />


            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_3sdp"
                android:layout_below="@id/btn_logout"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@drawable/relative_shape"
                android:backgroundTint="?attr/buttonColor" />


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>